--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ services:
     image: postgres:16
     container_name: postgres_projectApi
     environment:
-      POSTGRES_DB: bd_produtosApi
+      POSTGRES_DB: bd_productApi
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
     ports:
       - "5434:5432"
     networks:
-      - produtosApi_network
+      - productApi_network
 
 networks:
   productApi_network:
