--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,17 @@
     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     <version>2.8.11</version>
 		</dependency>
+		<dependency>
+  <groupId>org.springdoc</groupId>
+  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+  <version>2.5.0</version>
+	</dependency>
+	<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.7.7</version><!--$NO-MVN-MAN-VER$-->
+	</dependency>
+
 		</dependencies>
 
 	<build>
